--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
-    "@angular/animations": "^6.1.3",
+    "@angular/animations": "4.1.3",
     "@angular/common": "^6.1.3",
     "@angular/compiler": "^6.1.3",
     "@angular/compiler-cli": "^6.1.3",
@@ -20,26 +20,54 @@
     "@angular/http": "^6.1.3",
     "@angular/platform-browser": "^6.1.3",
     "@angular/platform-browser-dynamic": "^6.1.3",
+    "@ionic-native/calendar": "^4.12.2",
     "@ionic-native/core": "~4.11.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
+    "@ionic/app-scripts": "3.1.11",
     "@ionic/storage": "2.1.3",
+    "angular-progress-bar": "^1.0.5",
     "angularfire2": "^5.0.0-rc.11",
     "body-parser": "^1.18.3",
+    "cordova-plugin-calendar": "^5.1.2",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "firebase": "^5.4.0",
+    "intl": "^1.2.5",
     "ionic-angular": "3.9.2",
+    "ionic-tooltips": "^2.0.1",
+    "ionic2-calendar": "^0.4.4",
+    "ionic3-calendar": "^1.1.6",
     "ionicons": "3.0.0",
+    "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
     "sw-toolbox": "3.6.0",
+    "typescript": "^3.0.1",
     "zone.js": "0.8.26",
-    "@ionic/app-scripts": "3.1.11",
-    "typescript": "^3.0.1"
+    "cordova-browser": "~5.0.4",
+    "cordova-android": "~7.0.0"
   },
-  "devDependencies": {
-  },
-  "description": "An Ionic project"
+  "devDependencies": {},
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-calendar": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "browser",
+      "android"
+    ]
+  }
 }
